[package]
name = "codechain-db"
version = "0.3.0"
authors = ["CodeChain Team <hi@codechain.io>", "Parity Technologies <admin@parity.io>"]
description = "Databases that CodeChain uses"
license = "AGPL-3.0"
edition = "2018"

[dependencies]
codechain-crypto = { path = "../crypto", version = "0.3" }
kvdb = "0.1"
plain_hasher = "0.2"
primitives = { git = "https://github.com/CodeChain-io/rust-codechain-primitives.git", version = "0.5" }
rlp = { path = "../rlp/rlp", version = "0.5" }

[dev-dependencies]
kvdb-memorydb = "0.1"
